# recomb_knapsack

./: .gitignore  TODO.md  pyproject.toml
notebooks/: 1_intro.ipynb
src/recomb_knapsack/sampling/: __init__.py  equal_weights.py  first_valid.py
src/recomb_knapsack/utils/: __init__.py  utils.py
