[tool.poetry]
name = "recomb-knapsack"
version = "0.1.0"
description = ""
authors = ["Eric Wang <eric.wang2237@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
tqdm = "^4.66.4"
matplotlib = "^3.9.0"
scipy = "^1.14.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
